force-app/main/default/objects/Space_Travel__c/Space_Travel__c.object-meta.xml
<CustomObject>
    <label>Space Travel</label>
    <nameField>
        <label>Space Travel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Space Travels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>