force-app/main/default/objects/Space_Travel__c/fields/Available_Storage_Weight__c.field-meta.xml
<CustomField>
    <fullName>Available_Storage_Weight__c</fullName>
    <label>Available Storage Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>