force-app/main/default/objects/Space_Travel__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>CASE( Planet_Destination__c , 
       &quot;Mercury&quot;, 52023000,
       &quot;Venus&quot;, 1, 
       &quot;Mars&quot;, 2,
       &quot;Jupiter&quot;, 3,
       &quot;Saturn&quot;, 4,
       &quot;Uranus&quot;, 5,
       &quot;Neptune&quot;, 6,
        null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>