force-app/main/default/objects/Space_Travel__c/fields/Food_Storage__c.field-meta.xml
<CustomField>
    <fullName>Food_Storage__c</fullName>
    <label>Food Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>