force-app/main/default/objects/Space_Travel__c/fields/Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost__c</fullName>
    <label>Fuel Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>