force-app/main/default/objects/Space_Travel__c/fields/Mining_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Mining_Project_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mining Project Id</label>
    <referenceTo>Mining_Project_Id__c</referenceTo>
    <relationshipLabel>Space Travels</relationshipLabel>
    <relationshipName>Space_Travels</relationshipName>
    <type>Lookup</type>
</CustomField>