force-app/main/default/objects/Space_Travel__c/fields/Planet_Destination__c.field-meta.xml
<CustomField>
    <fullName>Planet_Destination__c</fullName>
    <label>Planet Destination</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Venus</fullName>
            </value>
            <value>
                <fullName>Mars</fullName>
            </value>
            <value>
                <fullName>Jupiter</fullName>
            </value>
            <value>
                <fullName>Saturn</fullName>
            </value>
            <value>
                <fullName>Uranus</fullName>
            </value>
            <value>
                <fullName>Neptune</fullName>
            </value>
            <value>
                <fullName>Moon</fullName>
            </value>
            <value>
                <fullName>Io</fullName>
            </value>
            <value>
                <fullName>Enceladus</fullName>
            </value>
            <value>
                <fullName>Europa</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Ceres</fullName>
            </value>
            <value>
                <fullName>Asteroid Belt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>