force-app/main/default/objects/Space_Travel__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <label>Ship</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>